crates/deadline-cli/tests/cli/snapshots/cli__job_actions__job_cancel_mark_as_suspended_with_yes.snap
---
source: crates/deadline-cli/tests/cli/job_actions.rs
info:
  program: deadline
  args:
    - job
    - cancel
    - "--mark-as"
    - SUSPENDED
    - "--yes"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:51668"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51668"
    AWS_ENDPOINT_URL_S3: "http://localhost:51668"
    AWS_ENDPOINT_URL_STS: "http://localhost:51668"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpznRIXJ/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpznRIXJ
---
success: true
exit_code: 0
----- stdout -----
name: Render Job
jobId: job-aaf4cdf8aae242f58fb84c5bb19f199b
taskRunStatus: RUNNING
taskRunStatusCounts:
  RUNNING: 3
  SUCCEEDED: 7
startedAt: 2025-01-27 07:37:53+00:00
endedAt: ''
createdBy: user-abc
createdAt: 2025-01-27 07:34:41+00:00

Canceling job and marking as SUSPENDED...

----- stderr -----
