crates/deadline-cli/tests/cli/snapshots/cli__job_actions__job_requeue_tasks_custom_run_status.snap
---
source: crates/deadline-cli/tests/cli/job_actions.rs
info:
  program: deadline
  args:
    - job
    - requeue-tasks
    - "--run-status"
    - FAILED
    - "--run-status"
    - SUCCEEDED
    - "--yes"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61431"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61431"
    AWS_ENDPOINT_URL_STS: "http://localhost:61431"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpNK0jPW/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpNK0jPW
---
success: true
exit_code: 0
----- stdout -----
Job: Render Job (job-aaf4cdf8aae242f58fb84c5bb19f199b)
taskRunStatusCounts:
  FAILED: 2
  SUCCEEDED: 5
  CANCELED: 1

Requeuing all tasks with run status among: FAILED, SUCCEEDED
Estimated 7 total tasks (2 FAILED tasks, 5 SUCCEEDED tasks) to requeue.

Step: Render Step (step-aaaa)
  Requeuing an estimated 7 total tasks (2 FAILED tasks, 5 SUCCEEDED tasks)...
    FAILED task-0001
    SUCCEEDED task-0002
    FAILED task-0003

Requeued a total of 3 tasks.

----- stderr -----
