crates/deadline-cli/tests/cli/snapshots/cli__job_actions__job_requeue_tasks_run_status_invalid_value_exits_with_error.snap
---
source: crates/deadline-cli/tests/cli/job_actions.rs
info:
  program: deadline
  args:
    - job
    - requeue-tasks
    - "--run-status"
    - BANANA
    - "--yes"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:50510"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:50510"
    AWS_ENDPOINT_URL_S3: "http://localhost:50510"
    AWS_ENDPOINT_URL_STS: "http://localhost:50510"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp3MCKlp/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp3MCKlp
---
success: false
exit_code: 2
----- stdout -----
Invalid value for --run-status: BANANA. Valid values: SUSPENDED, CANCELED, FAILED, SUCCEEDED, NOT_COMPATIBLE

----- stderr -----
